<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderPage.ProviderOrderActivity">

    <ImageButton
        android:id="@+id/imageLogo"
        android:layout_width="402dp"
        android:layout_height="166dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        android:contentDescription="@string/logo"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/update_profile2"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/log_out2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchOrders"
        android:layout_width="407dp"
        android:layout_height="41dp"
        android:layout_marginBottom="380dp"
        android:queryHint="Search Orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginTop="178dp"
        android:text="@string/provider_s_account_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="273dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:text="@string/open_9_00am_10_00pm"
        app:layout_constraintBottom_toTopOf="@+id/searchOrders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="404dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="23dp"
        android:text="@string/pending_orders2"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchOrders" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderRecycler"
        android:layout_width="409dp"
        android:layout_height="238dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/provider_order_recycler_view_item" />


</androidx.constraintlayout.widget.ConstraintLayout>