<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="274dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/msgBox"
        android:layout_width="311dp"
        android:layout_height="275dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/write_message"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextView" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="51dp"
        android:text="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/resetBtn"
        app:layout_constraintTop_toBottomOf="@+id/msgBox" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="56dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="184dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgTextView" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:text="Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgBox" />
</androidx.constraintlayout.widget.ConstraintLayout>